deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mystaysui
  namespace: beta-app
  labels:
    app.kubernetes.io/name: mystaysui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mystaysui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mystaysui
    spec:
      containers:
        - name: mystaysui-api
          image: 306472407007.dkr.ecr.ap-south-1.amazonaws.com/ibs-skillset-happystays/my-stays-ui:2324e26
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              memory: "250Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"
