deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-stays-ui
  namespace: beta-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: my-stays-ui
